5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1578_1330.log
== TEST (2019-03-11 21:59:48) 
-- CODE:
print(250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 22:01:04) 
-- CODE:
print(round(2,2(250/6))

-- ERROR:
File "XXXX", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 22:01:16) 
-- CODE:
print(round(2,2(250/6))
-- ERROR:
File "XXXX", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 22:01:30) 
-- CODE:
print(round(250/6)
-- ERROR:
File "XXXX", line 2
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 22:01:39) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 22:02:05) 
-- CODE:
print(250/6)round(41, 2)
-- ERROR:
File "XXXX", line 1
    print(250/6)round(41, 2)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 22:02:54) 
-- CODE:
print(round(2, 2)(250/6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(2, 2)(250/6))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 22:05:39) 
-- CODE:
print(round(250/6, 1)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 22:05:48) 
-- CODE:
print(round(250/6, 1))
-- OUTPUT:
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 22:05:57) 
-- CODE:
print(round(250/6, 1))
-- OUTPUT:
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 22:06:00) 
-- CODE:
print(round(250/6, 1))
-- EXECUTION TIME:
0.112746
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 22:06:15) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.155865
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:27:53) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.215985
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
